fixed overflow-x on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,12 @@ body {
   background-color: #36011c;
 }
 
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .spacer{
   aspect-ratio: 1920/150;
   width: 100%;
